--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,25 @@ name: Main
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  update-charts:
-    name: Update wakatime stats charts
+  test-workflow:
+    name: Main workflow
     runs-on: ubuntu-latest
     steps:
-      - uses: dvjn/wakatime-charts@master
+      - uses: actions/checkout@v2
+      - uses: ./
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          COMMIT_MESSAGE: "✅"
+          BRANCH_NAME: "main"
+          IMAGES_FOLDER: "generated"
+          GIT_USER_EMAIL: "farihasultana237@gmail.com"
+          GIT_USER_NAME: "Fariha Sultana"
           
